kubernetes/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infraops
  labels:
    name: infraops
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
