kubernetes/base/04-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: infraops-mariadb
  namespace: infraops
spec:
  selector:
    app: infraops-mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: infraops-mariadb
  namespace: infraops
spec:
  serviceName: infraops-mariadb
  replicas: 1
  selector:
    matchLabels:
      app: infraops-mariadb
  template:
    metadata:
      labels:
        app: infraops-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:11.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command: ["healthcheck.sh", "--connect", "--innodb_initialized"]
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["healthcheck.sh", "--connect", "--innodb_initialized"]
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
  volumeClaimTemplates:
    - metadata:
        name: mariadb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
