kubernetes/base/06-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: infraops-frontend
  namespace: infraops
spec:
  selector:
    app: infraops-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infraops-frontend
  namespace: infraops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infraops-frontend
  template:
    metadata:
      labels:
        app: infraops-frontend
    spec:
      serviceAccountName: frontend-sa
      containers:
        - name: frontend
          image: infraops-frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 192Mi
