kubernetes/base/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infraops-ingress
  namespace: infraops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: infraops.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: infraops-backend
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: infraops-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infraops-frontend
                port:
                  number: 80
