kubernetes/base/08-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: infraops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-web
  namespace: infraops
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - infraops-frontend
          - infraops-backend
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8000
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: infraops
spec:
  podSelector:
    matchLabels:
      app: infraops-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: infraops-frontend
      ports:
        - protocol: TCP
          port: 8000
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mariadb
  namespace: infraops
spec:
  podSelector:
    matchLabels:
      app: infraops-mariadb
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: infraops-backend
      ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-and-web-egress
  namespace: infraops
spec:
  podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8000
  policyTypes:
    - Egress
